# confplate

./: .gitignore  LICENSE  README.md  TODO.md  confplate.py  requirements.txt  setup.cfg
confplate/: __init__.py  confplate.py
examples/: cat3560.txt  new-subnets.csv  new-subnets.txt  win-netsh-dhcp-server-scope.txt
