[metadata]
name = confplate
author = Jochen Bartl
author-email = jochenbartl@mailbox.org
summary = Config file generator based on Jinja2 templates
description-file = README.md
home-page = https://github.com/verbosemode/confplate
requires-python = >=2.7
classifier = 
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python
keywords = template

[entry_points]
console_scripts =
    confplate = confplate:main
